--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -415,6 +415,7 @@
 
     .dyn-cell.date-container {
         border-bottom: 1px solid $clr-border;
+        cursor: pointer;
     }
 
     .dyn-cell.files {
