--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -9,7 +9,7 @@
             pointer-events: none;
             z-index: 99999;
             top: 127px;
-            left: -5px;
+            left: -6px;
             width: 200px;
             height: 900px;
             box-shadow: 31px 0px 47px -41px rgba(0, 0, 0, 0.74);
@@ -271,12 +271,7 @@
             @include for-mobile-layout {
                 left: 0;
                 grid-template-columns: 200px;
-
-            }
-
-            @include for-mobile-layout {
-                left: 0;
-                grid-template-columns: 200px;
+                opacity: 0.9;
 
             }
 
