--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -366,6 +366,7 @@
         font-size: em(13px);
         color: #666;
         border: none;
+        height: max-content;
     }
 
     .group-header button {
