Add margin the board home

--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -100,7 +100,7 @@
             justify-content: center;
             font-family: Figtree;
             font-weight: 400;
-            margin-left: 5em;
+            margin-left: em(30px);
 
             & span {
                 // margin-top: -4px;
