--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -62,6 +62,8 @@ $clr-label-30: #bea8fa;
 $clr-label-31: #a9bee9;
 $clr-label-32: #9d9ab9;
 $clr-label-33: #563e3e;
+$primary-background-color: #181b34;
+$secondary-background-color: #292f4c;
 
 
 // Status Colors
