--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -83,14 +83,21 @@
         z-index: 1;
         overflow: hidden;
 
+        & img {
+            width: auto;
+            border-radius: 4px;
+
+        }
+
         & .quick-search-item-image {
             display: flex;
             max-height: 140px;
             // width: 152px;
             margin-top: -10px;
-         
-    
-       
+            border-radius: 4px;
+
+
+
         }
 
         & .welcome-user-container {
@@ -112,9 +119,7 @@
             width: max-content;
         }
 
-        & img{
-            width: auto;
-        }
+
 
 
     }
@@ -133,39 +138,18 @@
         .board-home-list-container {
             border-radius: 0.5em;
             box-shadow: 0px 3px 12px #e6e9ef;
-            height: 100%;
+            // height: 100%;
+            padding-top: 20px;
             width: 100%;
             display: grid;
-            grid-template-rows: 4em 1fr;
+            grid-template-rows: 2em 1fr;
             margin-top: 16px;
             padding-inline: 40px;
 
-            // @include for-mobile-layout {
-            //     display: flex;
-            //     flex-direction: column;
-            //     overflow: hidden;
-            //     border-radius: 0.5em 0 0 0;
-            //     box-shadow: none;
-            //     margin-top: 26px;
-            //     padding-inline: 20px;
+            & h2 {
+                font-family: poppins-semi;
 
-
-
-            // & .board-image {
-            //     display: block;
-            //     width: 60px;
-            // }
-
-
-            // & .quick-search-item-image {
-            //     display: none;
-            // }
-
-            // & .boardIcon {
-            //     display: none;
-            // }
-
-            // }
+            }
 
             .recently-visited-acord {
                 display: grid;
@@ -174,21 +158,12 @@
                 column-gap: 7px;
                 align-items: center;
 
-                // @include for-mobile-layout {
-                //     display: flex;
-                //     flex-direction: column;
-                //     gap: 14px;
-                //     align-items: flex-start;
-
-                // }
                 svg {
                     cursor: pointer;
                 }
             }
 
             h2 {
-                // padding: 20px;
-                // padding-top: 30px;
                 font-size: 18px;
                 color: #323338;
             }
@@ -196,10 +171,6 @@
 
 
             .board-home-list {
-                // padding: 40px;
-
-
-
                 background-color: #fff;
                 display: grid;
                 grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -212,7 +183,6 @@
                 .board-home-card-container {
                     display: grid;
                     width: auto;
-                    // min-width: min-content;
                     height: min-content;
                     grid-template-rows: 140px 2em;
                     justify-items: start;
@@ -223,15 +193,7 @@
                     color: rgb(50, 51, 56);
                     cursor: pointer;
                     transition: 0.2s;
-
-                    // @include for-mobile-layout {
-                    //     display: flex;
-                    // }
-                    // & img{
-                    //     object-fit: contain;
-                    //     width: 300px;
-                    //     background: #6c6cfe;
-                    // }
+                    gap: 8px;
 
                     &:hover {
                         box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
@@ -239,19 +201,32 @@
                         text-decoration: none;
                     }
 
-                    .quick-search-item-image {
-                        max-height: 140px;
-                        overflow: hidden;
-                        margin-bottom: 8px;
+                    // .quick-search-item-image {
+                    //     overflow: hidden;
+                    //     margin-bottom: em(8px);
+                    //     width: 100%;
+                    //     height: em(140px);
+                    //     border-radius: em(4px);
+                    //     display: flex;
+                    //     align-items: center;
+                    //     justify-content: center;
+                    // }
 
+                    .quick-search-item-image {
+                        overflow: hidden;
+                        width: 100%;
+                        height: 140px;
+                        border-radius: 4px;
+                        object-fit: cover;
+                        object-position: center;
                     }
 
                     .board-home-card-title {
                         gap: 5px;
                         display: flex;
-                        align-items: center; 
+                        align-items: center;
 
-                        & span{
+                        & span {
                             font-family: poppins-semi;
                             line-height: 1;
                         }
@@ -265,7 +240,56 @@
                 }
             }
 
-        }
+            .update-feed-container {
+                display: grid;
+                grid-template-rows: 2em 1fr;
+                padding-block: 3em;
+                gap: 12px;
+                font-family: poppins-semi;
 
+
+                .update-feed {
+                    width: 100%;
+                    height: 100%;
+                    border: 1px solid $clr-border;
+                    border-radius: 0.3em;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .no-updates-message {
+                        padding: 20px;
+                        background-color: #f3f4f6;
+                        border-radius: 8px;
+                        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                        margin: 20px;
+                        text-align: center;
+                    }
+
+                    .no-updates-message h5 {
+                        color: #333;
+                        margin-bottom: 10px;
+                    }
+
+                    .no-updates-message p {
+                        color: #666;
+                        font-family: poppins;
+                        font-size: 14px;
+                    }
+
+                    .gif-container {
+                        width: 320px;
+                        height: 320px;
+
+                        & img {
+                            border-radius: 0.3em;
+                            width: 320px;
+                            height: 320px;
+                        }
+                    }
+
+                }
+            }
+        }
     }
 }
