--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -31,8 +31,17 @@ header {
         align-self: center;
         align-items: center;
     }
-    
-    .badgeWrapper_a9fd67ec0d .badge_cf82e50bb0:not(.outside_8db7f262b3){
+
+    .badgeWrapper_a9fd67ec0d .badge_cf82e50bb0:not(.outside_8db7f262b3) {
         z-index: 0;
     }
+}
+
+.logout-check {
+    position: absolute;
+    z-index: 11111111111;
+    top: 3em;
+    background-color: #fff;
+    box-shadow: 0 4px 17px 6px #0000001a;
+    border-radius: 8px;
 }
