Design improv and render automations list

--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -51,6 +51,11 @@
 }
 
 @font-face {
+    font-family: figtree-light;
+    src: url(/src/assets/styles/fonts/Figtree/Figtree-Light.ttf);
+}
+
+@font-face {
     font-family: figtree-bold;
     src: url(/src/assets/styles/fonts/Figtree/Figtree-Bold.ttf);
 }
