--- a/src/assets/styles/cmps/_automation-board.scss
+++ b/src/assets/styles/cmps/_automation-board.scss
@@ -30,12 +30,51 @@
         grid-column: 2;
         grid-template-rows: 125px 1fr;
 
+        .create-automation-btn {
+            background-color: rgb(0, 115, 234);
+            text-align: center;
+            width: max-content;
+            padding: 8px;
+            border-radius: 4px;
+            color: white;
+            cursor: pointer;
+            font-family: figtree-light;
+            font-size: 14px;
+
+            &:hover {
+                background: #0060b9;
+            }
+
+        }
+
+        .arrow-down-automation {
+
+            // height: 24px;
+            svg {
+                color: #00854d;
+
+            }
+        }
+
         .status-automation-container {
             display: grid;
-            grid-auto-flow: column;
+            // grid-auto-flow: column;
+            row-gap: 20px;
             font-size: 24px;
             justify-content: start;
-            column-gap: 7px;
+
+            // column-gap: 7px;
+            .trigger-container-automation,
+            .action-container-automation {
+                display: grid;
+                grid-auto-flow: column;
+                column-gap: 7px;
+                align-items: center;
+            }
+
+            .action-container-automation {
+                width: max-content;
+            }
 
         }
 
@@ -44,9 +83,9 @@
             font-weight: 100;
         }
 
-        // .move-automation-span {
-        //     grid-row: 2;
-        // }
+        .move-automation-span {
+            // width: min-content;
+        }
 
         .dynamic-dialog-automation-placeholder {
             color: #c3c6d4;
@@ -59,6 +98,43 @@
                 color: #0073ea;
             }
 
+            &.selected {
+                color: #323336;
+            }
+
+
+
+        }
+
+        .active-automations-container {
+
+            display: grid;
+            grid-auto-rows: minmax(100px, 150px);
+            font-size: 24px;
+            margin-top: 32px;
+
+            .automation-item {
+                display: grid;
+                grid-auto-flow: column;
+                align-items: center;
+                grid-template-columns: 150px 1fr 150px;
+                justify-items: center;
+                border: 1px solid #e6e9ef;
+                border-radius: 10px;
+
+                .automations-icons-list-container {
+                    display: grid;
+                    grid-auto-flow: column;
+                    column-gap: 7px;
+                    width: min-content;
+                }
+
+                .automation-details {
+                    display: grid;
+                    grid-auto-flow: column;
+                    column-gap: 7px;
+                }
+            }
         }
 
         .dynamic-dialog-automation-container {
@@ -71,9 +147,10 @@
             margin-top: 1px;
             left: -8px;
             padding: 8px;
+            z-index: 111111;
             // top: 5px;
-            
-            .list-item-dialog-automation{
+
+            .list-item-dialog-automation {
                 padding: 8px;
                 border-radius: 4px;
                 font-size: 16px;
@@ -81,12 +158,13 @@
                 grid-auto-flow: column;
                 justify-content: start;
                 align-items: center;
-                column-gap: 7px;      
-                cursor: pointer;          
+                column-gap: 7px;
+                cursor: pointer;
 
                 svg {
                     padding-top: 3px;
                 }
+
                 &:hover {
                     background-color: rgba(103, 104, 121, 0.1);
                 }
