--- a/src/assets/styles/cmps/_automation-board.scss
+++ b/src/assets/styles/cmps/_automation-board.scss
@@ -23,6 +23,32 @@
         .automations-logo {
             padding-inline-start: 18px;
         }
+
+        .close-automations {
+            justify-self: end;
+            padding-inline-end: 18px;
+            cursor: pointer;
+        }
+        .close-add-automations {
+            display: grid;
+            grid-auto-flow: column;
+            width: max-content;
+            align-items: center;
+            margin-inline-start: 18px;
+            column-gap: 7px;
+            cursor: pointer;
+            height: 32px;
+            border-radius: 4px;
+            padding-inline: 4px;
+
+            &:hover {
+                background-color: rgba(103, 104, 121, 0.1);
+            }
+
+            span {
+                padding-top: 2px;
+            }
+        }
     }
 
     .automations-main {
@@ -45,6 +71,22 @@
                 background: #0060b9;
             }
 
+        }
+        .automations-main-upper{
+            display: grid;
+            grid-auto-flow: column;
+            .automations-actions {
+                display: grid;
+                justify-items: end;
+                grid-row: 1;
+                .create-automation-btn {
+                    height: max-content;
+                }
+            }
+            .automations-count {
+                grid-row: 2;
+                grid-column: 1;
+            }
         }
 
         .arrow-down-automation {
@@ -90,7 +132,7 @@
         .dynamic-dialog-automation-placeholder {
             color: #c3c6d4;
             box-shadow: 0px 2px 0px 0px #323336;
-            width: min-content;
+            width: max-content;
             position: relative;
             cursor: pointer;
 
@@ -122,6 +164,24 @@
                 border: 1px solid #e6e9ef;
                 border-radius: 10px;
 
+                .automation-list-actions {
+                    display: grid;
+                    grid-auto-flow: column;
+                    column-gap: 7px;
+                    align-self: start;
+                    padding: 12px;
+
+                    .remove-automation-icon {
+                        cursor: pointer;
+                        background-color: transparent;
+                        padding: 4px;
+                        border-radius: 4px;
+                        &:hover {
+                            background-color: rgba(103, 104, 121, 0.1);
+                        }
+                    }
+                }
+
                 .automations-icons-list-container {
                     display: grid;
                     grid-auto-flow: column;
@@ -133,6 +193,7 @@
                     display: grid;
                     grid-auto-flow: column;
                     column-gap: 7px;
+                    justify-self: start;
                 }
             }
         }
