--- a/src/assets/styles/cmps/_automation-board.scss
+++ b/src/assets/styles/cmps/_automation-board.scss
@@ -56,6 +56,11 @@
         grid-column: 2;
         grid-template-rows: 125px 1fr;
 
+        .add-automations{
+            justify-self: center;
+            margin-top: 88px;
+        }
+
         .create-automation-btn {
             background-color: rgb(0, 115, 234);
             text-align: center;
