--- a/src/assets/styles/cmps/_activity.scss
+++ b/src/assets/styles/cmps/_activity.scss
@@ -12,6 +12,11 @@
     display: flex;
     flex-direction: column;
     z-index: 999999;
+    
+    .activity-input-container{
+        display: flex;
+    }
+    
 
     .right-top {
         display: flex;
