--- a/src/assets/styles/cmps/_activity.scss
+++ b/src/assets/styles/cmps/_activity.scss
@@ -12,11 +12,12 @@
     display: flex;
     flex-direction: column;
     z-index: 999999;
-    
-    .activity-input-container{
+    overflow: auto;
+
+    .activity-input-container {
         display: flex;
     }
-    
+
 
     .right-top {
         display: flex;
@@ -54,12 +55,12 @@
 
 
     .input-details {
-        padding: 10px 20px;
-        font-size: 1.1428571429rem;
-        border-radius: 8px;
         border: none;
+
+        padding: 10px 20px;
+        font-size: 18px;
+        border-radius: 8px;
         flex-grow: 0.8;
-        // outline: 1px solid #0073ea;
         font-family: figtree;
         font-size: 1rem;
         margin-left: 1em;
@@ -77,7 +78,8 @@
         text-align: start;
         color: #323338;
         text-decoration: none;
-
+        
+        margin-bottom: 0.5em;
         margin-left: 2em;
         margin-top: 1em;
 
@@ -173,4 +175,23 @@
     .regular-msg {
         margin-right: 0.5em;
     }
+}
+
+.actions-list{
+    margin-bottom: 1em;
+}
+
+.msgs-num {
+    position: absolute;
+    bottom: 4px;
+    right: 15px;
+    width: 13px;
+    height: 13px;
+    background-color: #0073ea;
+    color: #fff;
+    font-size: .7142857143rem;
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    place-content: center;
 }
