--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -44,4 +44,6 @@ header {
     background-color: #fff;
     box-shadow: 0 4px 17px 6px #0000001a;
     border-radius: 8px;
+    align-items: center;
+    display: flex;
 }
