--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -6,10 +6,9 @@
     & .home-header {
         display: flex;
         align-items: center;
-        width: em(1440px);
         height: em(72px);
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 1em;
+        margin-right: 1em;
 
         & .home-actions {
             display: flex;
@@ -79,10 +78,11 @@
 
         & h1 {
             font-family: poppins-bold;
-            // margin-bottom: 1vw;
+            margin-bottom: .2em;
+            text-align: center;
             font-size: em(60px);
             letter-spacing: -.5px;
-            // line-height: em(85px);
+            line-height: normal;
         }
 
         & h2 {
@@ -98,200 +98,228 @@
     }
 
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
 
+    }
+
+
+    .grid-item {
+        padding: 20px;
+        background-color: blue;
+        border: 1px solid black;
+        resize: both;
+        /* Allows resizing */
+        overflow: auto;
+        /* Needed to enable resizing */
+    }
+
+    .welcome-section {
+        display: flex;
+        flex-wrap: wrap;
+        place-content: center;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #c3c6d4;
+        border-radius: .5em;
+        height: 7.5em;
+        margin: .5em;
+        padding: .5em;
+        padding-block-start: .4375em;
+        text-align: center;
+        width: 8.8571428571rem;
+        height: 8.8571428571rem;
+    }
+
+    .flex {
+        display: flex;
+        align-self: center;
+    }
+
+    .img-welcome {
+        width: 4em;
+        height: 4em;
+    }
+
+    .btn-container {
+        display: flex;
+        flex-direction: column;
+        place-items: center;
+        margin-bottom: 4em;
+        margin-top: 1.5em;
+    }
+
+    .cta-button {
+        font-family: poppins;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 40px;
+        width: 130px;
+        background-color: rgb(97, 97, 255);
+        border-radius: 2em;
+        padding: 8px 14px 8px 16px;
+        font-size: 13px;
+        border-bottom: none;
+        gap: 1em;
+        white-space: nowrap;
+        // margin-bottom: 1em;
+    }
+
+    .cta-button:hover {
+        border-bottom: none;
+        text-decoration: none;
+    }
+
+    .sponsers-section {
+        padding-block: 4.375em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .sponsers-imgs-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5em;
+        // margin-top: 3em;
+    }
+
+    .boost-your-team {
+        justify-content: center;
+        padding-block: em(90px);
+    }
+
+    .boost-your-team-cta {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: .5em;
+
+    }
+
+    .footer-section-full {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        text-align: center;
+        color: #fff;
+        background: #181b34;
+        padding: 4.5714285714rem 0;
+        margin-block-start: 7.1428571429rem;
+        font-family: poppins-light;
+    }
+
+    .p-home {
+
+        font-size: 1.2857142857rem;
+        line-height: 32px;
+        margin-bottom: 20px;
+    }
+
+    .span {
+        font-size: 1.1428571429rem;
+        font-family: poppins-light;
+        line-height: 40px;
+        max-width: 35em;
+        margin-bottom: 1.3em;
+        text-align: center;
+    }
+
+    .video-sec {
+        display: flex;
+        place-items: center;
+        place-content: center;
+        gap: 4.5em;
+
+        @include for-mobile-layout {
+            flex-direction: column;
+        }
+    }
+
+    .title-and-icon-wrapper {
+        display: flex;
+        gap: 1em;
+        margin-bottom: 1em;
+    }
+
+    .monday-markup-language {
+        font-size: 1.125rem;
+        line-height: 32px;
+        margin: 0;
+        word-break: break-word;
+        max-width: 21em;
+    }
+
+    .home-video {
+        width: 35em;
+        padding: 56px 48px;
+        filter: drop-shadow(0px 8px 24px rgba(29, 140, 242, 0.5));
+
+        @include for-mobile-layout {
+            width: 100%;
+        }
+    }
+
+    .title-video-section {
+        color: rgb(97, 97, 255);
+        line-height: 0.75em;
+
+        font-size: 1.75rem;
+        font-weight: 400;
+    }
+
+    .card1:hover {
+        border-color: orange;
+    }
+
+    .card2:hover {
+        border-color: red;
+    }
+
+    .card3:hover {
+        border-color: blue;
+    }
+
+    a:hover {
+        text-decoration: none;
+        border-bottom: none;
+    }
+
+    .arrow-icon {
+        transition: transform 0.3s ease;
+        /* Add a transition effect for smoother movement */
+    }
+
+    .cta-button:hover .arrow-icon {
+        transform: translateX(5px);
+        /* Move the arrow icon 5 pixels to the right on hover */
+    }
+
+    .cta-button{
+        display: flex; 
+        place-content: center;
+    }
 }
 
-
-.grid-item {
-    padding: 20px;
-    background-color: blue;
-    border: 1px solid black;
-    resize: both;
-    /* Allows resizing */
-    overflow: auto;
-    /* Needed to enable resizing */
-}
-
-.welcome-section {
-    display: flex;
-    flex-wrap: wrap;
-    place-content: center;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #c3c6d4;
-    border-radius: .5em;
-    height: 7.5em;
-    margin: .5em;
-    padding: .5em;
-    padding-block-start: .4375em;
+.h2-welcome {
+    // width: 60%;
     text-align: center;
-    width: 8.8571428571rem;
-    height: 8.8571428571rem;
-}
-
-.img-welcome {
-    width: 4em;
-    height: 4em;
-}
-
-.btn-container {
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-    margin-bottom: 4em;
-    margin-top: 1.5em;
-}
-
-.cta-button {
-    font-family: poppins;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    width: 130px;
-    background-color: rgb(97, 97, 255);
-    border-radius: 2em;
-    padding: 8px 14px 8px 16px;
-    font-size: 13px;
-    border-bottom: none;
-    gap: 1em;
-    white-space: nowrap;
-    // margin-bottom: 1em;
-}
-
-.cta-button:hover {
-    border-bottom: none;
-    text-decoration: none;
-}
-
-.sponsers-section {
-    padding-block: 4.375em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.sponsers-imgs-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5em;
-    // margin-top: 3em;
-}
-
-.boost-your-team {
-    justify-content: center;
-    padding: 90px;
-}
-
-.footer-section-full {
-    height: 312px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center;
-    color: #fff;
-    background: #181b34;
-    padding: 4.5714285714rem 0;
-    margin-block-start: 7.1428571429rem;
-    font-family: poppins-light;
-}
-
-.p-home {
-
-    font-size: 1.2857142857rem;
-    line-height: 32px;
-    margin-bottom: 20px;
-}
-
-.span {
-    font-size: 1.1428571429rem;
-    font-family: poppins-light;
-    line-height: 40px;
-    width: 35em;
-    margin-bottom: 1.3em;
-}
-
-.video-sec {
-    display: flex;
-    place-items: center;
-    place-content: center;
-    gap: 4.5em;
-}
-
-.title-and-icon-wrapper {
-    display: flex;
-    gap: 1em;
-    margin-bottom: 1em;
-}
-
-.monday-markup-language {
-    font-size: 1.125rem;
-    line-height: 32px;
-    margin: 0;
-    word-break: break-word;
-    width: 21em;
-}
-
-.home-video {
-    width: 35em;
-    padding: 56px 48px;
-    filter: drop-shadow(0px 8px 24px rgba(29, 140, 242, 0.5));
-}
-
-.title-video-section {
-    color: rgb(97, 97, 255);
-    line-height: 0.75em;
-
-    font-size: 1.75rem;
-    font-weight: 400;
-}
-
-.card1:hover {
-    border-color: orange;
-}
-
-.card2:hover {
-    border-color: red;
-}
-
-.card3:hover {
-    border-color: blue;
-}
-
-a:hover{
-    text-decoration: none;
-    border-bottom: none;
-}
-
-.arrow-icon {
-    transition: transform 0.3s ease; /* Add a transition effect for smoother movement */
-  }
-  
-  .cta-button:hover .arrow-icon {
-    transform: translateX(5px); /* Move the arrow icon 5 pixels to the right on hover */
-  }
-
-}
-
-.h2-welcome{
-    width: 60%;
-    text-align: left;
     font-size: 2.25rem;
     line-height: 48px;
     font-family: poppins-bold;
-    padding-inline-end: 60px;
+    // padding-inline-end: 60px;
     color: #333;
+
 }
