--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -1,6 +1,34 @@
 @include for-narrow-layout {
     .board-filter-wrapper {
 
+        .person-filter-container {
+            position: relative;
+            & :nth-child(3) {
+                padding: 0;
+                padding-inline-start: 4px;
+            }
+            .open-filter-person-title {
+                font-size: 1.2em;
+                font-family: Figtree-bold;
+            }
+            .open-filter-person-subtitle {
+
+            }
+            .open-filter-person {
+                position: absolute;
+                top: 32px;
+                // width: 20vw;
+                background: white;
+                z-index: 1111111111111111;
+                padding-block: 2em;
+                padding-inline-end: 10em;
+                padding-inline-start: 2em;
+                text-align: start;
+                box-shadow: 0 4px 8px #0003; 
+                display: grid;
+                row-gap: 0.5em               ;
+            }
+        }
 
         .board-filter {
             margin-top: em(8px);
@@ -62,7 +90,8 @@
                 padding-inline: 8px;
                 padding-block: 0px;
             }
-            .search-btn{
+
+            .search-btn {
                 width: 40px;
             }
         }
