--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -195,7 +195,7 @@
 
 @include for-mobile-layout {
     .main-header {
-        display: none;
+        // display: none;
     }
 
     .board-header {
