--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -596,7 +596,7 @@
 
     & .stats-clrs-container {
         padding-inline: 4px;
-        padding-block: 8px;
+        // padding-block: 8px;
         // display: flex;
         pointer-events: fill;
 
