--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -11,24 +11,29 @@
     border-radius: 0.5em 0 0 0;
     // min-width: 0;
     width: 100%;
+
     @include for-mobile-layout {
-        >div{
+        border-radius: 0;
+
+        >div {
             display: none;
+
         }
+
         // overflow: hidden;
     }
 }
 
-.loader-container{
+.loader-container {
     display: flex;
     place-items: center;
     place-content: center;
     overflow: auto;
-    background-color: $clr6; 
+    background-color: $clr6;
     position: relative;
 }
 
-.loader{
+.loader {
     width: 100px;
     height: 100px;
 }
