--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -116,7 +116,7 @@
         }
 
         & .welcome-user-content {
-            width: max-content;
+            // width: max-content;
         }
 
 
@@ -128,10 +128,10 @@
         background-color: #fff;
         padding-inline: 20px;
 
-        // @include for-mobile-layout {
+        @include for-mobile-layout {
 
-        //     padding-inline: 0;
-        // }
+            padding-inline: 0;
+        }
 
 
 
